# remote_pdf_parse_serve

./: .gitignore  README.md  ecosystem.config.js  example.env  main.py  pyproject.toml  requirements.txt  run_server.py  test_api_cache.py  test_cache.py  test_mineru.py
assets/: test.md  test_simple_output.md  test_updated.md
docs/: api_client.md  cache_usage.md  remote_pdf_api_client.md
output/simcse/auto/: simcse.md  simcse_content_list.json  simcse_middle.json  simcse_model.json
output/simcse/vlm/: simcse.md  simcse_content_list.json  simcse_middle.json  simcse_model_output.txt
tests/: output_docs.md  test_api_client.py  test_api_image.py  test_api_pdf.py  test_api_pdf_result.md  test_async_image_analysis.py  test_mineru copy.py
utils/: __init__.py  api_client.py  download_mineru_models.py  init_proxy.py  remote_pdf_api_client.py
web_serves/: .env.example  app.py  config.json  config.py  exceptions.py  requirements.txt  test.html
web_serves/image_utils/: async_image_analysis.py  image_analysis_utils.py  prompts.py
web_serves/markdown_utils/: markdown_image_processor.py  update_markdown_with_analysis.py
web_serves/pdf_utils/: mineru_parse.py
web_serves/routers/: image_upload.py  pdf_processing.py  system.py
web_serves/static/css/: styles.css
web_serves/templates/: README.md  base.html  image_upload.html  index.html  pdf_upload.html  simple_base_antd.html  simple_image_upload_antd.html  simple_index_antd.html  simple_multi_pdf_upload_antd.html  simple_pdf_upload_antd.html
web_serves/utils/: file_handler.py  logger.py
(+3 files in other folders)
