[project]
name = "remote-pdf-parse-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "diskcache>=5.6.3",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "magic-pdf[all]>=0.6.1",
    "mineru[all]>=2.1.0",
    "modelscope>=1.28.0",
    "openai>=1.95.1",
    "opencv-python>=4.12.0.88",
    "pathlib2>=2.3.7.post1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn[standard]>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
